Add color and and div to the page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
     <script src="/script.js" defer></script>
 </head>
 <body>
-    <div id="grid-container"></div>
+    <h1>Etch-a-Sketch</h1>
+    <div id="wholeBody">
+        <div id="grid-container">
+        </div>
+        <div id="button"></div>
+    </div>
 </body>
 </html>
