--- a/index.html
+++ b/index.html
@@ -14,26 +14,25 @@
       <div class="right-side">
         <div class="input-container">
           <div class="input-text">
-            <h3>Enter the number of grid you would like to have.</h3>
+            <h2>Hold control key(ctrl) to sketch!</h2>
           </div>
           <div class="input-field">
             <input
               type="number"
               id="gridSizeInput"
-              placeholder="Enter a number"
+              placeholder="Enter a number(eg.20)"
               min="1"
               max="100"
             />
             <button id="enterButton">Enter</button>
           </div>
-          
-          
         </div>
         <div class="instruction">
-            <h3>Hold control key(ctrl) to sketch!</h3>
-          </div>
+          <h4>Enter the number of grid you would like to have.</h4>
+        </div>
         <div id="resetbtn"></div>
       </div>
     </div>
+    <div class="footer"><p>webpage by Abel Alebachew.</p></div>
   </body>
 </html>
